<resources>
    <string name="app_name">MV_078</string>
    <string name="bottom1">社区</string>
    <string name="bottom2">云狗</string>
    <string name="bottom3">设备</string>
    <string name="bottom4">文件</string>
    <string name="bottom5">个人</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">用户名</string>
    <string name="comment_hint">说点什么吧...</string>
    <string name="play">播放</string>
    <string name="dynamic">动态</string>
    <string name="concern">关注</string>
    <string name="concern_in">已关注</string>
    <string name="fans">粉丝</string>
    <string name="reply">回复</string>
    <string name="localFile">本地文件</string>
    <string name="frontVideo">前视频</string>
    <string name="minVideo">小视频</string>
    <string name="photo">照片</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="selectAll">全选</string>


    <!--友盟-->

        <string name="pull_to_refresh_pull_label" >向下拉动可以刷新</string>
        <string name="pull_to_refresh_release_label" >松开可以刷新</string>
        <string name="pull_to_refresh_refreshing_label" >加载中&#8230;</string>
        <string name="pull_to_refresh_tap_label" >点击刷新</string>
        <string name="umeng_socialize_network_break_alert" >请连接网络后再尝试！</string>
        <string name="umeng_socialize_comment" >评论</string>
        <string name="umeng_socialize_comment_detail" >评论详情</string>
        <string name="umeng_socialize_back" >返回</string>
        <string name="umeng_socialize_near_At" >最近\@的好友</string>
        <string name="umeng_socialize_friends" >关注的好友</string>
        <string name="umeng_socialize_send" >发布</string>
        <string name="umeng_socialize_tip_blacklist" >对不起，因为违反了用户协议您已被禁言.</string>
        <string name="umeng_socialize_tip_loginfailed" >登录失败&#8230;</string>
        <string name="umeng_socialize_msg_sec" >秒前</string>
        <string name="umeng_socialize_msg_min" >分钟前</string>
        <string name="umeng_socialize_msg_hor" >小时前</string>
        <string name="umeng_socialize_ucenter_login_title_guide" >游客登录</string>
        <string name="umeng_socialize_ucenter_login_title_platform" >登录帐号</string>

        <dimen name="alphabet_size">12dip</dimen>
        <dimen name="umeng_socialize_pad_window_height">350dip</dimen>
        <dimen name="umeng_socialize_pad_window_width">580dip</dimen>

    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台，
												（二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。
												（三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
        <string name="umeng_socialize_login_qq">QQ空间</string>
        <string name="umeng_socialize_login">登录</string>
        <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
        <string name="umeng_socialize_text_authorize">授权</string>
        <string name="umeng_socialize_text_unauthorize">未授权</string>
        <string name="umeng_socialize_text_ucenter">个人中心</string>
        <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
        <string name="umeng_socialize_text_comment_hint">说点什么吧&#8230;</string>
        <string name="umeng_socialize_text_friend_list">好友列表</string>
        <string name="umeng_socialize_text_visitor">游客</string>
        <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
        <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
        <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
        <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
        <string name="umeng_socialize_text_waitting">请稍候...</string>
        <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
        <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
        <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
        <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
        <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
        <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
        <string name="umeng_socialize_text_waitting_redirect">跳转</string>
        <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
        <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
        <!-- 平台名称 -->
        <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
        <string name="umeng_socialize_text_wenxin_fav">微信收藏</string>
        <string name="umeng_socialize_text_sina_key">微博</string>
        <string name="umeng_socialize_text_qq_key">QQ</string>
        <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
        <string name="umeng_socialize_text_renren_key">人人网</string>
        <string name="umeng_socialize_text_douban_key">豆瓣网</string>
        <string name="umeng_socialize_text_weixin_key">微信</string>
        <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
        <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
        <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
        <string name="umeng_example_home_btn_plus">社交分享</string>
        <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
        <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
        <string name="umeng_socialize_cancel_btn_str">取消</string>
        <string name="umeng_socialize_send_btn_str">发送</string>
        <string name="umeng_socialize_img_des"></string>
        <string name="umeng_socialize_share">分享</string>

        <string name="umeng_socialize_mail">邮件</string>
        <string name="umeng_socialize_sms">短信</string>
        <string name="umeng_socialize_sina">新浪</string>
        <string name="umeng_socialize_text_yixin_key">易信</string>
        <string name="umeng_socialize_text_yixincircle_key">易信朋友圈</string>

        <string name="umeng_socialize_text_laiwangdynamic_key">来往动态</string>
        <string name="umeng_socialize_text_evernote_key">印象笔记</string>
        <string name="umeng_socialize_text_ydnote_key">有道云笔记</string>
        <string name="umeng_socialize_text_facebook_key">facebook</string>
        <string name="umeng_socialize_text_twitter_key">twitter</string>
        <string name="umeng_socialize_text_instagram_key">instagram</string>
        <string name="umeng_socialize_text_pinterest_key">pinterest</string>
        <string name="umeng_socialize_text_pocket_key">pocket</string>
        <string name="umeng_socialize_text_linkedin_key">Linkedin</string>
        <string name="umeng_socialize_text_foursquare_key">Foursquare</string>
        <string name="umeng_socialize_text_whatsapp_key">WhatsApp</string>
        <string name="umeng_socialize_text_line_key">LINE</string>
        <string name="umeng_socialize_text_flickr_key">Flickr</string>
        <string name="umeng_socialize_text_tumblr_key">Tumblr</string>
        <string name="umeng_socialize_text_alipay_key">支付宝</string>
        <string name="umeng_socialize_text_kakao_key">Kakao Talk</string>
        <string name="umeng_socialize_text_googleplus_key">GooglePlus</string>
    <string name="massageCenter">消息中心</string>
    <string name="version">版本信息</string>
    <string name="skill">小技巧</string>
    <string name="generalSetting">通用设置</string>
    <string name="long_snapshot">远程抓拍</string>
    <string name="setting">设置</string>
    <string name="track">轨迹</string>
    <string name="state">状态</string>
    <string name="location">定位</string>
    <string name="imei">IMEI</string>
    <string name="connected">已连接</string>
    <string name="ununited">未连接</string>
    <string name="bluetooth">蓝牙</string>
</resources>
