<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_gravity="bottom"
    android:background="@color/bottom_white"
    android:orientation="horizontal">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RadioButton
            android:id="@+id/tab_community"
            style="@style/main_bottom_radioButtom"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab01"
            android:text="@string/bottom1" />

        <RadioButton
            android:id="@+id/tab_clouddog"
            style="@style/main_bottom_radioButtom"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab02"
            android:text="@string/bottom2" />

        <RadioButton
            android:id="@+id/tab_device"
            style="@style/main_bottom_radioButtom"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab03"
            android:text="@string/bottom3" />

        <RadioButton
            android:id="@+id/tab_file"
            style="@style/main_bottom_radioButtom"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab04"
            android:text="@string/bottom4" />

        <RadioButton
            android:id="@+id/tab_person"
            style="@style/main_bottom_radioButtom"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab05"
            android:text="@string/bottom5" />
    </RadioGroup>

</LinearLayout>