<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                style="@style/person_count_layout_title"
                android:text="@string/dynamic" />

            <TextView
                android:id="@+id/tv_vReleaseNumber"
                style="@style/person_count_layout_number"
                android:text="222" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/person_count_layout_title"
                android:text="@string/concern" />

            <TextView
                android:id="@+id/tv_followNumber"
                style="@style/person_count_layout_number"
                android:text="333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/person_count_layout_title"
                android:text="@string/fans" />

            <TextView
                android:id="@+id/tv_fansNumber"
                style="@style/person_count_layout_number"
                android:layout_width="wrap_content"
                android:text="444" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
